[package]
name = "onlyne"
version = "0.2.4"
edition = "2024"
rust-version = "1.85"
authors = ["dbydd <1992003927@qq.com>"]
description = "Workspace-local IM channel daemon and broker for local agents"
license = "MIT"
repository = "https://github.com/dbydd/onlyne"
homepage = "https://github.com/dbydd/onlyne"
readme = "README.md"
keywords = ["im", "messaging", "daemon", "ipc", "agents"]
categories = ["command-line-utilities", "network-programming", "asynchronous"]

[dependencies]
anyhow = "1"
base64 = "0.22"
async-trait = "0.1"
openlark = { version = "0.17.0", default-features = false, features = ["websocket"] }
pulldown-cmark = "0.12"
qrcode = { version = "0.14", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls"] }
wechat-ilink = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-display-width = "0.2"
url = "2"

[dev-dependencies]
tempfile = "3"
